FIX: Remove invalid --illegal-access=permit from maven.config and move to jvm.config