@@ -6,7 +6,6 @@
 -Dfile.encoding=UTF-8
 -Dmaven.compiler.debug=true
 -Dmaven.compiler.debuglevel=lines,vars,source
---illegal-access=permit
 -Dmaven.compiler.executable=javac
 -Dmaven.compiler.fork=true
 -Dmaven.compiler.verbose=true
